# pwrapi-ref

./: .config  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.api  Makefile.dummyDev  README  TODO  attribute.cc  attribute.h  attributeSrc.h  autogen.sh  cntxt.cc  cntxt.h  config.h  configure.ac  debug.c  debug.h  dev.h  devGraphNode.h  devTreeNode.h  deviceStat.cc  dummyDev.c  foobar.h  graphNode.h  group.h  init.cc  init.h  main.c  main2.c  mchw.h  mchw_pidev.c  mchw_pidev.h  objTreeNode.cc  objTreeNode.h  object.cc  object.h  objectEl.cc  objectEl.h  (+23 more)
config/: acx_mpi.m4  pwrapi.m4  pwrapi_hwloc.m4  pwrapi_mic.m4  pwrapi_mpi.m4  pwrapi_msr.m4  pwrapi_piapi.m4  pwrapi_powergadget.m4  pwrapi_powerinsight.m4  pwrapi_python.m4  pwrapi_swig.m4  pwrapi_tinyxml.m4  pwrapi_tx2mon.m4  pwrapi_ulxmlrpcpp.m4  pwrapi_xmlrpc_c.m4
daemon/: Makefile  Makefile.am  README  run_dummy_server.sh  run_volta.sh  server.cpp
doc/: PowerAPI.7
examples/: Makefile  Makefile.am  README  dummySystem.xml  dummyTest.c  dummyTest.py  main.c  pg-node.xml  pi-node.xml  powerapi.c  rapl-node.xml  run-snippet-python.sh  run-snippet.sh  run.sh  run_dummy.sh  run_dummy_client.sh  run_dummy_python.sh  run_volta.sh  simpleTest.c  simpleTest.cc  snippet.c  snippet.py  teller-node.xml  teller.xml  volta.xml  walkTest.c  wu-node.xml  xtpm-node.xml  xtpm-platform.xml
examples/config/: 4  apm-node.xml  batchUtil.py  compliance.xml  cpu-node.xml  cray-xt.py  createNidMap.py  daemon.py  dummy.py  dummyNode.hwloc  dummySystem.xml  dummySystemCab0-daemon.xml  dummySystemLocal.xml  exec.py  hpe_power_manager.xml  i  ii  machine.py  opt-node.xml  pg-node.xml  pi-node.xml  pi-platform.xml  piapi-node.xml  piapi-platform.xml  pyConfig.py  rapl-node.xml  redfish-node.xml  routefile  teller.py  tellerTest.py  testExec.py  volta.py  voltaTest.py  voltaTestRoute.txt  wu-node.xml  xtpm-node.py  xtpm-node.xml  xtpm-platform.xml  xtpmNode.py  yy.py
examples/script/: pwr_profile  run-hwloc.sh  run-snippet-python.sh  run-snippet.sh  run_dummy.sh  run_dummy_client.sh  run_dummy_local_xml.sh  run_dummy_python.sh  run_hwloc.sh  xml_profile.in
hwloc/: Makefile  hwloc.cc  hwloc.cpp
lib/: Makefile  cntxt.cc  deviceStat.cc  ops.h  pow.cc  rpcTreeNode.h  xmlConfig.cc  xmlConfig.h
m4/: ac_python_devel.m4
plugins/: Makefile  Makefile.am  Makefile.dummyDev  README  TODO  dummyDev.c  dummy_dev.c  main.c  mchw_pidev.c  mchw_pidev.h  mchw_rapldev.c  mchw_rapldev.h  mchw_wudev.c  mchw_wudev.h  mchw_xtpmdev.c  mchw_xtpmdev.h  oshw_cpudev.c  oshw_cpudev.h  pwr_cpudev.c  pwr_cpudev.h  pwr_dev.c  pwr_dev.h  pwr_pgdev.c  pwr_pgdev.h  pwr_pidev.c  pwr_pidev.h  pwr_rapldev.c  pwr_rapldev.h  pwr_wudev.c  pwr_wudev.h  pwr_xtpmdev.c  pwr_xtpmdev.h  test.c
pow/: Makefile  Makefile.am  README  cntxt.cc  cntxt.h  config.h  debug.cc  debug.h  dev.h  devTreeNode.h  deviceStat.cc  group.h  (+18 more)
pwr/: Makefile  Makefile.am  README  cntxt.cc  cntxt.h  dev.h  devTreeNode.h  group.h  objTreeNode.h  ops.h  pow.h  pwr.cc  pwrdev.h  pwrtypes.h  stat.h  status.h  treeNode.h  util.h  xmlConfig.h
src/bindings/python/: Makefile.am  pypwr.i
src/plugins/: Makefile.am  README  dummy_dev.c  hpe_power_manager_utilities.c  hpe_power_manager_utilities.h  lm_sensor.c  lm_sensor.h  occ_sensor.c  occ_sensor.h  pwr_apmdev.c  pwr_apmdev.h  pwr_astra.c  pwr_cpudev.c  pwr_cpudev.h  pwr_dev.c  pwr_dev.h  pwr_hpe_power_manager_dev.c  pwr_ipmi.c  pwr_lm_sensor.c  pwr_micdev.c  pwr_micdev.h  pwr_msrdev.c  pwr_msrdev.h  pwr_occ_sensor.c  pwr_optdev.c  pwr_optdev.h  pwr_pgdev.c  pwr_pgdev.h  pwr_piapidev.c  pwr_piapidev.h  pwr_pidev.c  pwr_pidev.h  pwr_pmcdev.c  pwr_pmcdev.h  pwr_powercap.c  pwr_rapldev.c  pwr_rapldev.h  pwr_redfish_dev.c  pwr_redfish_dev.h  pwr_tx2mon.c  (+5 more)
src/pwr/: Makefile.am  allocEvent.cc  allocEvent.h  attrInfo.h  cntxt.cc  cntxt.h  communicator.h  config.h  debug.cc  debug.h  devTreeNode.h  device.h  deviceStat.cc  deviceStat.h  distCntxt.cc  distCntxt.h  distComm.cc  distComm.h  distGroup.cc  distGroup.h  distGrpComm.cc  distGrpComm.h  distObject.cc  distObject.h  distRequest.cc  distRequest.h  dynamic.cc  event.h  eventChannel.cc  eventChannel.h  eventType.h  events.h  group.h  hwlocConfig.cc  hwlocConfig.h  impTypes.h  nullConfig.cc  nullConfig.h  objTreeNode.h  object.cc  (+23 more)
tools/: Makefile  Makefile.am  NOTES  README  nodePower.c  powerapi.c  powergrp.c  pwr-ls.c  pwr.c  pwr_runtime.c  pwrapi.8  pwrapi.c  pwrdmp.8  pwrdmp.c  pwrenergy.c  pwrgen.8  pwrgen.cc  pwrget.c  pwrgrp.8  pwrgrp.c  pwrset.c  pwrsrv.8  pwrsrv.cpp  run-powerapi.sh  run-powergrp.sh  test.c
tools/config/: astra.hwloc  cooper-node.xml  cooper-platform.xml  coral.hwloc  cpu.hwloc  msr.hwloc  multi.hwloc  powercap.hwloc  rapl.hwloc  shepard-node.xml  shepard-platform.xml  teller-node.xml  teller-platform.xml  xt40.hwloc
tools/daemon/: README  debug.h  run_dummy_server.sh
tools/hwloc/: Makefile  Makefile.am
tools/pwrdaemon/: Makefile  Makefile.am  board0  client  comb  node0  node1  powerrt.cc  pwrdaemon.cc  routeTable.txt  rtr0  xxx  yyy
tools/pwrdaemon/logger/: energy.h  logger.cc  logger.h  mult.h  power.h  powerGrp.h  rate.h  setMult.h  stat.h  timeUtil.h  util.h  work.h
tools/pwrdaemon/router/: Makefile  allocEvent.cc  allocEvent.h  client.cc  commCreateEvent.cc  commCreateEvent.h  commGetSamplesEvent.h  commLogEvents.h  commReqEvent.h  commRespEvent.h  router.cc  router.h  routerCore.h  routerEvent.h  routerSelect.cc  routerSelect.h  rtrRouterEvent.h  serverEvents.h  torusCore.cc  torusCore.h  treeCore.cc  treeCore.h
tools/pwrdaemon/server/: Makefile  allocEvent.cc  allocEvent.h  commCreateEvent.h  commDestroyEvent.h  commGetSamplesReqEvent.h  commLogEvent.h  commReqEvent.h  main.cc  routerEvent.h  server  server.cc  server.h
tools/script/: deploy-shepard.sh  deploy-teller.sh  hwloc_astra_profile.in  hwloc_coral_profile.in  hwloc_cpu_profile.in  hwloc_msr_profile.in  hwloc_multi_profile.in  hwloc_powercap_profile.in  hwloc_profile.in  hwloc_rapl_profile.in  hwloc_xt40_profile.in  run-pwrapi.sh  run-pwrgrp.sh  run_volta.sh
tools/swig/: Makefile  Makefile.am  pwr.i
(+20 files in other folders)
